# ricks-textureripper

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  changelog.txt
.claude/: settings.local.json
src/: app.rs  atlas.rs  autosave.rs  b64.rs  file_assoc.rs  history.rs  image_edit.rs  info.md  install.rs  layouts.rs  main.rs  proj_io.rs  project.rs  render.rs  rip_tool.rs  snapshot.rs  texture_view.rs  update.rs  warp.rs
src/ui/: docking.rs  mod.rs
tools/: README.md  setup-git-filters.ps1  setup-git-filters.sh  strip_rs_comments.py
